Java 17 upgrade